# astro-sim

./: CMakeLists.txt  README.md
include/: camera.hpp  controls.hpp  nbody.cuh  objloader.hpp  particle_renderer.hpp  rendering.hpp  shaders.hpp  test.cuh
shaders/: fragment.frag  vertex.vert
src/: camera.cpp  controls.cpp  nbody.cu  objloader.cpp  particle_renderer.cpp  rendering.cpp  shaders.cpp  test.cu  window.cpp
